--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,10 +1,22 @@
 @import url(./__pic/profile__pic.css);
 @import url(./__info/profile__info.css);
+@import url(./__wrapper/profile__wrapper.css);
 @import url(./__name/profile__name.css);
 @import url(./__edit-button/profile__edit-button.css);
 @import url(./__title/profile__title.css);
 @import url(./__add-button/profile__add-button.css);
 
 .profile {
+  width: 100%;
   margin-bottom: 50px;
+  display: flex;
+}
+
+@media screen and (max-width: 650px) {
+  .profile {
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 282px;
+  }
 }
