--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -7,4 +7,8 @@
   max-width: 282px;
   width: 100%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  border-radius: 3%;
+  overflow: hidden;
 }
