--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,3 +8,9 @@
   margin-bottom: 60px;
   max-width: 318px;
 }
+
+@media screen and (max-width: 882px) {
+  .footer {
+    margin-left: 14px;
+  }
+}
