--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -3,3 +3,12 @@
   padding-bottom: 46.6px;
   padding-top: 45px;
 }
+
+@media screen and (max-width: 882px) {
+  .logo {
+    max-width: 103px;
+    padding-top: 30px;
+    padding-bottom: 26px;
+    margin-left: 14px;
+  }
+}
