--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,3 +1,26 @@
 .profile__edit-button {
-  
+  width: 24px;
+  height: 24px;
+  background-image: url(../../../images/edit-button.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 1px solid #ffffff;
+  margin-top: auto;
+  margin-bottom: 10px;
+}
+
+.profile__edit-button:hover {
+  opacity: 60%;
+}
+
+.profile__edit-button:active {
+  opacity: 100%;
+}
+
+@media screen and (max-width: 650px) {
+  .profile__edit-button {
+    margin-bottom: 18px;
+    width: 18px;
+    height: 18px;
+  }
 }
