--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,3 +1,13 @@
 .profile__info {
-  
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Inter', 'Arial', sans-serif;
+}
+
+@media screen and (max-width: 650px) {
+  .profile__info {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
