--- a/blocks/profile/__pic/profile__pic.css
+++ b/blocks/profile/__pic/profile__pic.css
@@ -1,3 +1,13 @@
 .profile__pic {
-  
+  max-width: 120px;
+  max-height: 120px;
+  border-radius: 50%;
+  margin-right: 30px;
+}
+
+@media screen and (max-width: 650px) {
+  .profile__pic {
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
