feat: Добавить попап. Поправить дерево.

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -12,11 +12,11 @@
 }
 
 .profile__add-button:hover {
-  opacity: 60%;
+  opacity: 0.6;
 }
 
 .profile__add-button:active {
-  opacity: 100%;
+  opacity: 1;
 }
 
 @media screen and (max-width: 650px) {
