--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -7,6 +7,7 @@
   max-width: 282px;
   width: 100%;
   margin: 0 auto;
+  padding: 0;
   display: flex;
   flex-direction: column;
   border-radius: 3%;
