--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,8 +1,9 @@
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
-  max-width: 882px;
   grid-row-gap: 21px;
   grid-column-gap: 18px;
   margin-bottom: 66px;
+  list-style-type: none;
+  padding: 0;
 }
