--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,10 +1,9 @@
-.card__title {
+.popup__title {
   color: #000000;
   font-family: 'Inter', 'Arial', sans-serif;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+  margin-top: 0;
+  margin-bottom: 54px;
 }
