--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,14 +7,15 @@
   border: 1px solid #ffffff;
   margin-top: auto;
   margin-bottom: 10px;
+  margin-right: auto;
 }
 
 .profile__edit-button:hover {
-  opacity: 60%;
+  opacity: 0.6;
 }
 
 .profile__edit-button:active {
-  opacity: 100%;
+  opacity: 1;
 }
 
 @media screen and (max-width: 650px) {
