--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -2,6 +2,7 @@
   color: #000000;
   font-family: 'Inter', 'Arial', sans-serif;
   font-weight: 900;
+  max-width: 226px;
   font-size: 24px;
   line-height: 29px;
   text-overflow: ellipsis;
