--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -4,7 +4,7 @@
 @import url(./__like-button/card__like-button.css);
 
 .card {
-  max-width: 282px;
+  /* max-width: 282px; */
   width: 100%;
   margin: 0 auto;
   padding: 0;
