--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,9 +1,13 @@
+@import url(./__list/cards__list.css);
+
 .cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
-  grid-row-gap: 21px;
-  grid-column-gap: 18px;
   margin-bottom: 66px;
-  list-style-type: none;
-  padding: 0;
+}
+
+
+@media screen and (max-width:900px){
+  .cards {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
