--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,16 +1,7 @@
+@import url(./__copyright/footer__copyright.css);
+
 .footer {
   font-family: 'Inter', 'Arial', sans-serif;
-  color: #545454;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
   margin-bottom: 60px;
-  max-width: 318px;
-}
-
-@media screen and (max-width: 882px) {
-  .footer {
-    margin-left: 14px;
-  }
+  width: 100%;
 }
