--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,11 +1,11 @@
 .popup__close-button {
   position: absolute;
-  right: -35px;
-  top: -35px;
+  right: -37px;
+  top: -37px;
   background-image: url(../../../images/close-icon.svg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: fill;
   width: 40px;
   height: 40px;
 }
