--- a/blocks/popup/__input-title/popup__input-title.css
+++ b/blocks/popup/__input-title/popup__input-title.css
@@ -1,11 +1,11 @@
 .popup__input-title {
   margin-bottom: 48px;
   border: 0;
-  border-bottom: 1px solid #777777;
+  border-bottom: 1px solid #bbbbbb;
   outline: none;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   width: 100%;
-  padding-bottom: 5px;
+  padding: 0 0 10px;
 }
