--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,6 +5,12 @@
   font-family: 'Inter', 'Arial', sans-serif;
 }
 
+@media screen and (max-width: 700px) {
+  .profile__info {
+    margin-right: 20px;
+  }
+}
+
 @media screen and (max-width: 650px) {
   .profile__info {
     margin-left: auto;
