--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -7,9 +7,9 @@
 }
 
 .card__like-button:hover {
-  opacity: 60%;
+  opacity: 0.6;
 }
 
 .card__like-button:active {
-  opacity: 100%;
+  opacity: 1;
 }
