--- a/pages/index.css
+++ b/pages/index.css
@@ -11,4 +11,6 @@
 @import url(../blocks/card/__like-button/_pressed/card__like-button_pressed.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/close-button/popup__close-button.css);
 @import url(../blocks/popup/_opened/popup__opened.css);
+@import url(../blocks/popup-image/popup-image.css);
