--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,7 +7,9 @@
   max-width: 882px;
   width: 100%;
   height: 100%;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.4s, opacity .4s linear;
 }
 
 .popup::before {
