--- a/blocks/close-button/popup__close-button.css
+++ b/blocks/close-button/popup__close-button.css
@@ -2,7 +2,7 @@
   position: absolute;
   right: -37px;
   top: -37px;
-  background-image: url(../../../images/close-icon.svg);
+  background-image: url(../../images/close-icon.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: fill;
