--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -3,6 +3,7 @@
   height: 50px;
   background-color: #000000;
   color: #ffffff;
+  border: 1px solid #000000;
   border-radius: 2px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-size: 18px;
