--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,7 +1,9 @@
 .card__like-button {
-  width: 21px;
+  width: 25px;
   height: 18px;
   background-image: url(../../../images/like-button.svg);
+  background-repeat: no-repeat;
+  background-position: right;
   margin-top: auto;
   margin-bottom: auto;
 }
