--- a/blocks/cards/__list/cards__list.css
+++ b/blocks/cards/__list/cards__list.css
@@ -1,8 +1,8 @@
 .cards__list {
   display: grid;
   grid-template-columns: repeat(auto-fit, 282px);
-  grid-row-gap: 21px;
-  grid-column-gap: 18px;
+  row-gap: 21px;
+  column-gap: 18px;
   list-style-type: none;
   padding: 0;
   justify-content: center;
