--- a/src/blocks/profile/__pic/profile__pic.css
+++ b/src/blocks/profile/__pic/profile__pic.css
@@ -1,8 +1,17 @@
 .profile__pic {
   max-width: 120px;
-  max-height: 120px;
   border-radius: 50%;
-  margin-right: 30px;
+  object-fit: cover;
+  height: 100%;
+}
+
+.profile__pic:hover {
+  filter: brightness(20%);
+  cursor: pointer;
+}
+
+.profile__pic:hover + .profile__edit-icon {
+  visibility: visible;
 }
 
 @media screen and (max-width: 650px) {
