--- a/src/blocks/profile/__overlay/profile__overlay.css
+++ b/src/blocks/profile/__overlay/profile__overlay.css
@@ -4,3 +4,10 @@
   max-height: 120px;
   margin-right: 30px;
 }
+
+@media screen and (max-width: 650px) {
+  .profile__overlay {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
