--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -60,6 +60,7 @@
 @import url(../blocks/popup-profile/popup-profile.css);
 
 @import url(../blocks/popup-card/popup-card.css);
+@import url(../blocks/popup-avatar/popup-avatar.css);
 
 @import url(../blocks/popup-image/popup-image.css);
 @import url(../blocks/popup-image/__container/popup-image__container.css);
