--- a/src/blocks/popup-image/__image/popup-image__image.css
+++ b/src/blocks/popup-image/__image/popup-image__image.css
@@ -2,7 +2,7 @@
   margin-bottom: 10px;
   padding: 0;
   max-height: 75vh;
-  max-width: 75vw;
-  display:block;
+  max-width: 816px;
+  display: block;
   object-fit: contain;
 }
